@startuml

title __MESSAGE's Class Diagram__\n

  namespace jp.ac.shibaura.it.ie {
    namespace domain.application.chat {
      namespace message {
        class jp.ac.shibaura.it.ie.domain.application.chat.message.ChatMessagePostInteractor {
            + handle()
        }
      }
    }
  }
  

  namespace jp.ac.shibaura.it.ie {
    namespace domain.application.chat {
      namespace message {
        class jp.ac.shibaura.it.ie.domain.application.chat.message.ChatMessageUpdateInteractor {
            + handle()
        }
      }
    }
  }
  

  jp.ac.shibaura.it.ie.domain.application.chat.message.ChatMessagePostInteractor .up.|> jp.ac.shibaura.it.ie.usecases.chat.message.post.ChatMessagePostUseCase
  jp.ac.shibaura.it.ie.domain.application.chat.message.ChatMessagePostInteractor o-- jp.ac.shibaura.it.ie.domain.model.chat.ChatRepository : chatRepository
  jp.ac.shibaura.it.ie.domain.application.chat.message.ChatMessagePostInteractor o-- jp.ac.shibaura.it.ie.domain.model.image.ImageRepository : imageRepository
  jp.ac.shibaura.it.ie.domain.application.chat.message.ChatMessagePostInteractor o-- jp.ac.shibaura.it.ie.log.LogUtils : logger
  jp.ac.shibaura.it.ie.domain.application.chat.message.ChatMessagePostInteractor o-- jp.ac.shibaura.it.ie.domain.model.room.RoomRepository : roomRepository
  jp.ac.shibaura.it.ie.domain.application.chat.message.ChatMessagePostInteractor o-- jp.ac.shibaura.it.ie.domain.model.session.SessionRepository : sessionRepository
  jp.ac.shibaura.it.ie.domain.application.chat.message.ChatMessagePostInteractor o-- jp.ac.shibaura.it.ie.domain.model.user.UserRepository : userRepository
  jp.ac.shibaura.it.ie.domain.application.chat.message.ChatMessageUpdateInteractor .up.|> jp.ac.shibaura.it.ie.usecases.chat.message.update.ChatMessageUpdateUseCase
  jp.ac.shibaura.it.ie.domain.application.chat.message.ChatMessageUpdateInteractor o-- jp.ac.shibaura.it.ie.domain.model.chat.ChatRepository : chatRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
